; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_block-backend-fs.c_create_parent_path.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_block-backend-fs.c_create_parent_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@G_FILE_TEST_EXISTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Failed to create object parent path: %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @create_parent_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_parent_path(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @g_path_get_dirname(i8* %5)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %30

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = load i32, i32* @G_FILE_TEST_EXISTS, align 4
  %13 = call i64 @g_file_test(i8* %11, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @g_free(i8* %16)
  store i32 0, i32* %2, align 4
  br label %30

18:                                               ; preds = %10
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 @g_mkdir_with_parents(i8* %19, i32 511)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @seaf_warning(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %23)
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @g_free(i8* %25)
  store i32 -1, i32* %2, align 4
  br label %30

27:                                               ; preds = %18
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @g_free(i8* %28)
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %22, %15, %9
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i8* @g_path_get_dirname(i8*) #1

declare dso_local i64 @g_file_test(i8*, i32) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i64 @g_mkdir_with_parents(i8*, i32) #1

declare dso_local i32 @seaf_warning(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
